Fix: Add checkstyle maven plugin